[CuidoMiCiudad] Nav menu alignment fix
To compensate for upcoming `height` change in Core.

--- a/web/cobrands/cuidomiciudad/layout/_header.scss
+++ b/web/cobrands/cuidomiciudad/layout/_header.scss
@@ -43,3 +43,7 @@ body.twothirdswidthpage .content .sticky-sidebar aside {
     // Match the height of #site-header (75px logo plus 5em padding).
     top: 75px + (5 * 16px);
 }
+
+#main-nav {
+    height: auto;
+}
